# competitor-intelligence-agent

./: .env.example  .gitignore  README.md  pyproject.toml  test.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: IngestForm.jsx  ReportView.jsx  ResearchForm.jsx  ResearchPanel.jsx
scripts/: demo_file_handler.py
src/: main.py
src/agents/: __init__.py  graph.py  state.py
src/configs/: __init__.py  env.py  llm.py
src/evaluation/: __init__.py
src/tools/: __init__.py  convert_vector.py  search_tool.py  vector_db_tool.py
src/utils/: __init__.py  exceptions.py  file_handler.py  logger.py
