[project]
name = "competitor-intelligence-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint>=4.1.1",
    "load-dotenv>=0.1.0",
    "mcp>=1.28.1",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.51.0",
]
